[package]
authors = ["Michael Nesbitt <michael.nesbitt111@gmail.com>"]
edition = "2021"
name = "ponyboy_bot"
version = "0.2.10"

[dependencies]
futures = "0.3"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
toml = "0.8"
warp = "0.3"
